--- a/booking_detail.html
+++ b/booking_detail.html
@@ -1,1 +1,124 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/auth.css">
+    <link rel="stylesheet" href="assets/css/custom.css">  
 
+    <title>PT Pelni - Landing Page</title>
+</head>
+<body>
+
+    <nav>
+        <ul>
+            <li class="logo">
+                <a href="index.html">
+                    <img src="assets/img/logo_pelni.png" alt="logo" class="logo" height="50">
+                </a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">Tentang Kami</a>
+            </li>
+            <li>
+                <a href="travel_ticket_search.html" class="nav-link">Reservasi Tiket</a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">Tol Laut & Jasa Logistik</a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">Layanan</a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">Galeri</a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">Berita</a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">Kontak Kami</a>
+            </li>
+
+            <li class="right-menu icon-nav">
+                <a class="nav-link" href="javascript:void(0)">
+                    <img src="assets/img/languange.png" alt="lang" width="30px">
+                </a>
+            </li>
+            <li class="right-menu">
+                <a class="nav-username" id="btn-profile-user">Username</a>
+            </li>
+            <li class="right-menu icon-nav">
+                <a class="nav-link font-weight-bold" href="javascript:void(0)">
+                    <i class="fa fa-user-circle" style="font-size: 30px;"></i>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="content-image-header">
+        <img src="assets/img/image-header.png" alt="img" width="100%">
+    </div>
+
+    <div class="info-reservation border-none" style="padding-bottom: 70px !important;">
+        <div class="info-top">
+            <div class="left-col-reservation">
+                <div class="col-info-reservation">
+                    <h3 class="margin-0 text-abu mb-10">Pelabuhan Asal</h3> 
+                    <h1 class="text-semi-black mt-custom">Surabaya</h1>
+                </div>
+                <div class="col-info-reservation-separator">
+                    <h3 class="margin-0 text-white mb-10">-</h3> 
+                    <h1 class="text-semi-black mt-custom">
+                        <i class="fa fa-arrow-right text-grey"></i>
+                    </h1>
+                </div>
+                <div class="col-info-reservation">
+                    <h3 class="margin-0 text-abu mb-10">Pelabuhan Tujuan</h3> 
+                    <h1 class="text-semi-black mt-custom">Pontianak</h1>
+                </div>
+            </div>
+            <div class="right-col-reservation">
+                <a href="passenger_information.html" class="btn-close-search">Buka Pencarian</a>
+            </div>
+        </div>
+        <div class="info-down">
+            <h3 class="count-search text-abu">2 Dewasa 1 Bayi (0 - 23 Bulan)</h3>         
+        </div>
+    </div> 
+
+<!--   Result   -->
+
+    <hr class="separator-grey">
+    <footer>
+        <div class="footer-top">
+            <img src="assets/img/footer.png" alt="footer" width="100%">
+        </div>
+        <hr class="separator-footer">
+        <div class="footer-sponsor">
+            <img src="assets/img/footer-sponsor.png" alt="sponsor" width="100%">
+        </div>
+    </footer>
+    <div class="footer-copyright">
+        &copy; Copyright 2022 - PT PELNI
+    </div>
+
+    <div class="dropdown-user" style="display: none;">
+        <div class="dropdown-menu">
+           <a href="history.html">Riwayat Transaksi</a>
+        </div>
+        <div class="dropdown-menu">
+            <a href="javascript:void(0)">Pengaturan</a>
+        </div>
+        <div class="dropdown-menu">
+            <button class="btn-logout" onclick="location.href='index.html'">Logout</button>
+        </div>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>    
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+    <script src="assets/js/index.js"></script>
+</body> 
+</html>
