feat: add invoice information

--- a/invoice.html
+++ b/invoice.html
@@ -58,7 +58,20 @@
     </nav>
 
     <div class="content-invoice">
-       
+       <div class="row-invoice">
+        <div class="left-col-invoice" style="width: 50%; float: left;">
+            <img src="assets/img/pelni-circle.png" alt="logo" width="80" style="margin: 10px 0;">
+            <img src="assets/img/pelni-text.png" alt="text" width="200" style="margin: 20px 0;">
+        </div>
+        <div class="right-col-invoice text-right" style="width: 50%; float: right;">
+            <b>2022/10/0061673/02/03/02</b>
+            <h1 class="margin-0">Invoice</h1>
+        </div>
+       </div>
+
+       <div class="row-invoice title-invoice" style="margin-top: 100px;">
+            <h1 class="text-white margin-0">DETAIL PEMBAYARAN</h1> 
+       </div>
 
        <div class="row-invoice border-invoice" style="height: 360px;">
             <div class="inner-invoice">
