feat: adjust css

--- a/booking_detail.html
+++ b/booking_detail.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/auth.css">
     <link rel="stylesheet" href="assets/css/custom.css">  
+    <link rel="stylesheet" href="assets/css/nav.css">  
 
     <title>PT Pelni - Landing</title>
 </head>
