--- a/history.html
+++ b/history.html
@@ -1,1 +1,117 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/auth.css">
+    <link rel="stylesheet" href="assets/css/custom.css">  
 
+    <title>PT Pelni - Landing Page</title>
+</head>
+<body>
+
+    <nav>
+        <ul>
+            <li class="logo">
+                <a href="index.html">
+                    <img src="assets/img/logo_pelni.png" alt="logo" class="logo" height="50">
+                </a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">Tentang Kami</a>
+            </li>
+            <li>
+                <a href="travel_ticket_search.html" class="nav-link">Reservasi Tiket</a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">Tol Laut & Jasa Logistik</a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">Layanan</a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">Galeri</a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">Berita</a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">Kontak Kami</a>
+            </li>
+
+            <li class="right-menu icon-nav">
+                <a class="nav-link" href="javascript:void(0)">
+                    <img src="assets/img/languange.png" alt="lang" width="30px">
+                </a>
+            </li>
+            <li class="right-menu">
+                <a class="nav-username" id="btn-profile-user">Username</a>
+            </li>
+            <li class="right-menu icon-nav">
+                <a class="nav-link font-weight-bold" href="javascript:void(0)">
+                    <i class="fa fa-user-circle" style="font-size: 30px;"></i>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="content-history">
+       <h1 class="margin-0 text-danger">Riwayat Transaksi</h1>
+
+       <div class="card-history mt-history">
+            <h2 class="margin-0 mb-custom">Surabaya <img src="assets/img/arrow-right-left.png" alt="icon" class="mx-icon" height="20"> Pontianak</h2>
+            <h3 class="margin-0 text-grey font-size-light">
+                2 Dewasa, 1 Bayi <span class="text-separator">|</span> Berangkat : Rabu, 15 Juni 2022  15:00 <span class="text-separator">|</span> Tiba :  Jumat, 17 Juni 2022  18.00 
+            </h3>
+            <hr style="boder: 1px solid #d9d9d9; margin: 15px 0 25px 0;">
+            <div class="card-history-footer">
+                <a href="invoice.html" class="link-show-invoice">Lihat Invoice</a>
+                <a href="javascript:void(0)" class="btn-not-paid">Transaksi Belum Dibayar</a>
+            </div>
+        </div>
+       <div class="card-history">
+            <h2 class="margin-0 mb-custom">Pontianak <img src="assets/img/arrow-right-left.png" alt="icon" class="mx-icon" height="20"> Surabaya</h2>
+            <h3 class="margin-0 text-grey font-size-light">
+                1 Dewasa, 1 Bayi <span class="text-separator">|</span> Berangkat : Rabu, 28 Februari 2021  15:00 <span class="text-separator">|</span> Tiba :  Jumat, 4 Maret 2021 18.00 
+            </h3>
+            <hr style="boder: 1px solid #d9d9d9; margin: 15px 0 25px 0;">
+            <div class="card-history-footer">
+                <a href="javascript:void(0)" class="btn-show-eticket">Lihat e-Tiket</a>
+            </div>
+        </div>
+    </div> 
+
+    <footer>
+        <div class="footer-top">
+            <img src="assets/img/footer.png" alt="footer" width="100%">
+        </div>
+        <hr class="separator-footer">
+        <div class="footer-sponsor">
+            <img src="assets/img/footer-sponsor.png" alt="sponsor" width="100%">
+        </div>
+    </footer>
+    <div class="footer-copyright">
+        &copy; Copyright 2022 - PT PELNI
+    </div>
+
+    <div class="dropdown-user" style="display: none;">
+        <div class="dropdown-menu">
+           <a href="history.html">Riwayat Transaksi</a>
+        </div>
+        <div class="dropdown-menu">
+            <a href="javascript:void(0)">Pengaturan</a>
+        </div>
+        <div class="dropdown-menu">
+            <button class="btn-logout" onclick="location.href='index.html'">Logout</button>
+        </div>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>    
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+    <script src='https://www.google.com/recaptcha/api.js'></script> 
+    <script src="assets/js/index.js"></script>
+</body> 
+</html>
