feat: update description on body email

--- a/email_verification.html
+++ b/email_verification.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/auth.css">
+    <link rel="stylesheet" href="assets/css/custom.css">  
 
+    <title>PT Pelni - Landing Page</title>
+</head>
+<body>
+
+    <div class="content-top">
+        <h2 class="text-danger">Verifikasi Email</h2>
+        <img src="assets/img/vector-email-verification.png" alt="img" width="500">
+        <h2 class="mb-email-verification">
+            Link verifikasi telah dikirimkan pada email anda. Segera cek email <br> dan klik tombol <span class="text-danger">verifikasi email</span> agar dapat melanjutkan proses <br> pendaftaran akun PELNI. 
+        </h2> 
+
+        <a href="index.html" class="btn-danger">KEMBALI KE HALAMAN UTAMA</a>
+    </div>
+
+    <footer>
+        <div class="footer-top">
+            <img src="assets/img/footer.png" alt="footer" width="100%">
+        </div>
+        <hr class="separator-footer">
+        <div class="footer-sponsor">
+            <img src="assets/img/footer-sponsor.png" alt="sponsor" width="100%">
+        </div>
+    </footer>
+    <div class="footer-copyright">
+        &copy; Copyright 2022 - PT PELNI
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>    
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+    <script src="assets/js/index.js"></script>
+</body> 
+</html>
