feat: adjust company logo

--- a/travel_ticket_search.html
+++ b/travel_ticket_search.html
@@ -15,7 +15,7 @@
         <ul>
             <li class="logo">
                 <a href="index.html">
-                    <img src="assets/img/logo_pelni.png" alt="logo" class="logo" height="50">
+                    <img src="assets/img/logo_pelni_new.png" alt="logo" class="logo" height="50">
                 </a>
             </li>
             <li>
