feat: add new card style

--- a/passenger_information.html
+++ b/passenger_information.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/auth.css">
     <link rel="stylesheet" href="assets/css/custom.css">  
+    <link rel="stylesheet" href="assets/css/card-v2.css">  
 
     <title>PT Pelni - Landing Page</title>
 </head>
