feat: adjust title page

--- a/passenger_information.html
+++ b/passenger_information.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/custom.css">  
     <link rel="stylesheet" href="assets/css/card-v2.css">  
 
-    <title>PT Pelni - Landing Page</title>
+    <title>PT Pelni Landing Page</title>
 </head>
 <body>
 
