feat: adjust title page

--- a/travel_ticket_choose.html
+++ b/travel_ticket_choose.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/auth.css">
     <link rel="stylesheet" href="assets/css/custom.css">     
 
-    <title>PT Pelni - Landing Page</title>
+    <title>PT Pelni - Landing Main Page</title>
 </head>
 <body>
 
