feat: adjust title page

--- a/travel_ticket_search.html
+++ b/travel_ticket_search.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/auth.css">
     <link rel="stylesheet" href="assets/css/custom.css">  
-    <title>PT Pelni - Landing Page</title>
+    <title>PT Pelni - Landing Page Layout</title>
 </head>
 <body>
 
