--- a/booking_detail.html
+++ b/booking_detail.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/auth.css">
     <link rel="stylesheet" href="assets/css/custom.css">  
 
-    <title>PT Pelni - Booking Detail</title>
+    <title>PT Pelni - Booking Detail Page</title>
 </head>
 <body>
 
